add text shadow to critical rolls

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -378,6 +378,7 @@ textarea.form-control {
 #dice-total.critical {
   animation: criticalGlow 1.5s ease-in-out;
   color: gold;
+  text-shadow: black;
   font-weight: 800;
 }
 
