--- a/templates/characters.html
+++ b/templates/characters.html
@@ -111,25 +111,84 @@
                   value="{{ character.name|default_if_none:'' }}">
               </div>
               <div class="mb-3">
+                <label for="id_level" class="form-label">Level</label>
+                <input type="number" name="class_type" id="id_level" class="form-control"
+                  value="{{ character.class_type|default_if_none:'1' }}" step="1" min="1"
+                  oninput="this.value = this.value.replace(/[^0-9]/g, '');">
+              </div>
+              <div class="mb-3">
                 <label for="id_class_type" class="form-label">Class</label>
                 <input type="text" name="class_type" id="id_class_type" class="form-control"
+                  value="{{ character.class_type|default_if_none:'' }}">
+              </div>
+              <div class="mb-3">
+                <label for="id_class_type" class="form-label">Race</label>
+                <input type="text" name="class_type" id="id_race" class="form-control"
                   value="{{ character.class_type|default_if_none:'' }}">
               </div>
             </div>
 
             <!-- Attributes Tab -->
-            <div class="tab-pane fade" id="attributes" role="tabpanel">
+            <div class="mb-3">
+              <h3>Character Attributes</h3>
+
               <div class="mb-3">
-                <label for="id_health" class="form-label">Health</label>
-                <input type="number" name="health" id="id_health" class="form-control"
-                  value="{{ character.health|default_if_none:'' }}">
+                <label for="id_hp" class="form-label">HP</label>
+                <input type="number" id="id_hp" name="hp" class="form-control"
+                  value="{{ character.hp|default_if_none:'10' }}" step="1" min="0"
+                  oninput="this.value = this.value.replace(/[^0-9]/g, '');">
               </div>
+
               <div class="mb-3">
-                <label for="id_mana" class="form-label">Mana</label>
-                <input type="number" name="mana" id="id_mana" class="form-control"
-                  value="{{ character.mana|default_if_none:'' }}">
+                <label for="id_mp" class="form-label">MP</label>
+                <input type="number" id="id_mp" name="mp" class="form-control"
+                  value="{{ character.mp|default_if_none:'5' }}" step="1" min="0"
+                  oninput="this.value = this.value.replace(/[^0-9]/g, '');">
+              </div>
+
+              <div class="mb-3">
+                <label for="id_strength" class="form-label">Strength</label>
+                <input type="number" id="id_strength" name="strength" class="form-control"
+                  value="{{ character.strength|default_if_none:'10' }}" step="1" min="1"
+                  oninput="this.value = this.value.replace(/[^0-9]/g, '');">
+              </div>
+
+              <div class="mb-3">
+                <label for="id_dexterity" class="form-label">Dexterity</label>
+                <input type="number" id="id_dexterity" name="dexterity" class="form-control"
+                  value="{{ character.dexterity|default_if_none:'10' }}" step="1" min="1"
+                  oninput="this.value = this.value.replace(/[^0-9]/g, '');">
+              </div>
+
+              <div class="mb-3">
+                <label for="id_constitution" class="form-label">Constitution</label>
+                <input type="number" id="id_constitution" name="constitution" class="form-control"
+                  value="{{ character.constitution|default_if_none:'10' }}" step="1" min="1"
+                  oninput="this.value = this.value.replace(/[^0-9]/g, '');">
+              </div>
+
+              <div class="mb-3">
+                <label for="id_intelligence" class="form-label">Intelligence</label>
+                <input type="number" id="id_intelligence" name="intelligence" class="form-control"
+                  value="{{ character.intelligence|default_if_none:'10' }}" step="1" min="1"
+                  oninput="this.value = this.value.replace(/[^0-9]/g, '');">
+              </div>
+
+              <div class="mb-3">
+                <label for="id_wisdom" class="form-label">Wisdom</label>
+                <input type="number" id="id_wisdom" name="wisdom" class="form-control"
+                  value="{{ character.wisdom|default_if_none:'10' }}" step="1" min="1"
+                  oninput="this.value = this.value.replace(/[^0-9]/g, '');">
+              </div>
+
+              <div class="mb-3">
+                <label for="id_charisma" class="form-label">Charisma</label>
+                <input type="number" id="id_charisma" name="charisma" class="form-control"
+                  value="{{ character.charisma|default_if_none:'10' }}" step="1" min="1"
+                  oninput="this.value = this.value.replace(/[^0-9]/g, '');">
               </div>
             </div>
+
 
             <!-- Equipment Tab -->
             <div class="tab-pane fade" id="equipment" role="tabpanel">
