--- a/templates/characters.html
+++ b/templates/characters.html
@@ -129,7 +129,7 @@
             </div>
 
             <!-- Attributes Tab -->
-            <div class="mb-3">
+            <div class="tab-pane fade" id="attributes" role="tabpanel">
               <h3>Character Attributes</h3>
 
               <div class="mb-3">
@@ -188,7 +188,6 @@
                   oninput="this.value = this.value.replace(/[^0-9]/g, '');">
               </div>
             </div>
-
 
             <!-- Equipment Tab -->
             <div class="tab-pane fade" id="equipment" role="tabpanel">
